Added a new education Univesity of Tokyo

--- a/index.html
+++ b/index.html
@@ -1031,6 +1031,39 @@
   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
     <div class="w-100">
       <h2 class="mb-5">Education</h2>
+      <!-- An education start -->
+      <div class="col-sm-12 mb-2">
+        <div class="card">
+          <div class=" card-body">
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Dec 2019 - Mar 2020</span>
+            </div>
+            <div class="resume-content">
+              <h3 class="mb-0">The university of Tokyo</h3>
+              <div class="subheading mb-3">Data Science Cetificate&ensp;<a
+                  href="https://gci.t.u-tokyo.ac.jp/gci-online-course-2019/" target="_blank">[link]</a>&nbsp;&nbsp;<a
+                  href="docs/GCI2019_Certificate.pdf" target="_blank">[See
+                  certificate]</a></div>
+              <p>Passed coding examinations to take this course.
+                I am one of the about 400 students who have successfully finished this course out of 900, the number of
+                students who had started the course.</p>
+              <span class="marker">Curriculum</span><br>
+              <ul>
+                <li>1st: <br>Introduction to Data Science and Python</li>
+                <li>2nd: <br>Numpy and Pandas</li>
+                <li>3rd: <br>Visualization</li>
+                <li>4th: <br>Probability and Statistics</li>
+                <li>5th: <br>Supervised Learning</li>
+                <li>6th: <br>unsupervised Learning</li>
+                <li>7th: <br>Model evaluation and Hyperparameter tuning</li>
+                <li>8th: <br>Final Project</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- An education is done -->
+
       <!-- An education section start -->
       <div class="col-sm-12 mb-2">
         <div class="card">
@@ -1042,10 +1075,9 @@
               <h3 class="mb-0">7 Gate Academy</h3>
               <div class="subheading mb-3">Machine Learning Bootcamp&ensp;<a href="https://7gate.academy/"
                   target="_blank">[link]</a></div>
-              <div>I was <span class="marker">selected</span> the last 7 students who allowed to join the class <span
-                  class="marker">from 120
-                  candidates</span> in selection
-                process.
+              <div><span class="marker">Out of about 120 applicants, I was selected
+                  as
+                  7</span> people who can take the course.
                 <p></p>
                 <span class="marker">Curriculum</span><br>
                 8 weeks, 3.5 hours * 4 days/week.<br>
